@@ -7,7 +7,7 @@
 </p>
 
 <p>
-	<%= f.label :url, "The named route for the static link" %>
+	<%= f.label :url, "The named route or path for the static link" %>
 	<%= f.text_field :url %>
 </p>
 
