@@ -1,3 +1,5 @@
+require File.expand_path(File.dirname(__FILE__) + "/lib/insert_routes.rb")
+
 class SitemapMigrationGenerator < Rails::Generator::NamedBase
   attr_reader :sitemap_table_name
   def initialize(runtime_args, runtime_options = {})
@@ -8,6 +10,10 @@ class SitemapMigrationGenerator < Rails::Generator::NamedBase
 
   def manifest
     record do |m|
+      m.route_resources :sitemap_static_links
+      m.route_resources :sitemap_widgets
+      m.route_resources :sitemap_settings
+      m.route_resource :sitemap
       m.migration_template 'migration.rb', 'db/migrate'
     end
   end
