@@ -1,3 +1,5 @@
+* Routes now added via generator
+
 ==== 0.3    10/23/2008
 ****  WARNING ****  Database schema change, be sure to add username and password to the SitemapSetting table.
 * Added password support to the plugin.  Uses basic http auth, leave usename and password blank to leave the http auth turned off.
